--- a/OFFICEBUBBLE.html
+++ b/OFFICEBUBBLE.html
@@ -33,7 +33,7 @@
                  geometry="primitive: sphere"></a-mixin>
 
 <!--Images-->
-        <img id="background" src="gradientblue.svg">
+        <img id="background" src="gradientblue.jpg">
         <img id="ground" src="grass.JPG">
         
         <img id="Adam" src="Adam.jpg">
